Bugfixes
The bugs that were fixed are (1) the tabs click horizon aren't wide enough and (2) verse/chapter selectors are not showing up (only shown as ellipsis).

--- a/css/stylesheet-id.css
+++ b/css/stylesheet-id.css
@@ -144,6 +144,7 @@ div[contenteditable=true],
   }
 
   #topbar > span {
+    position: relative;
     flex-grow: 1;
     padding: .3em .5em;
     margin: 5px;
@@ -165,6 +166,11 @@ div[contenteditable=true],
               flex-basis: initial;
       margin: 0 5px;
     }
+
+  #topbar > span > a {
+    width: 100%;
+    height: 100%;
+  }
 
     #topbar > span:first-child > span {
       border-left: 1.5px solid white;
@@ -206,9 +212,10 @@ div[contenteditable=true],
     }
 
     #applybook .selector a {
-      background-color: #ddd1;
       padding: 0 5px;
-      transition: all 100ms;
+      background-color: #ddd1;
+      border-radius: 3px;
+      transition: all 250ms;
     }
 
     #applybook .selector:nth-last-of-type(2) a,
@@ -216,6 +223,11 @@ div[contenteditable=true],
       background-color: #823a9c !important;
       color: #fff;
     }
+
+  #applyverse,
+  #applychapter {
+    white-space: normal;
+  }
 
   #topbar.wrap-active {
     -webkit-flex-wrap: wrap;
@@ -435,6 +447,7 @@ textarea {
   -webkit-flex-shrink: 0;
     -ms-flex-negative: 0;
           flex-shrink: 0;
+  border-radius: 5px;
 }
 #workspacewrapper > #workspaces {
   display: -webkit-box;
